Prevent dryguy box from covering nanodbc.

--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -8,6 +8,7 @@
         position: absolute;
         top: 1em;
         right: 1em;
+        max-height: 70px;
     }
 }
 
